--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
 
 		</script>
 		<script>
-            document.body.addEventListener('onload', function(){
+            window.onload = function(){
                 var as = document.getElementsByTagName('a')
                 var a
                 for (var i = 0; i < as.length; i++) {
                     a = as[i]
                     a.setAttribute('target', '_blank')
                 }
-            })
+            }
 		</script>
         <!-- Piwik --> 
         <script type="text/javascript">
